# mif02-analyse-tp1

./: .gitignore  CMakeLists.txt  readme.md
gui/: Makefile  main.cpp
gui/addons/filter/: average.hpp  gaussian.hpp  highpass.hpp  laplacian.hpp  median.hpp  sobel.hpp
gui/addons/geometric/: rotation.hpp  zoom.hpp
gui/addons/histogram/: edit.hpp  equalize.hpp  shift.hpp  show.hpp  stretch.hpp
gui/components/: BoolInput.hpp  OddIntegerInput.hpp
include/: filter.h  geometric.h  histogram.h
src/: base.cpp  filter.cpp  geometric.cpp  histogram.cpp  main.cpp
